--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,6 @@
 name: Release
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Release tag'
-        required: true
-        type: string
 jobs:
   package:
     uses: ./.github/workflows/reusable-package.yml
@@ -13,10 +8,19 @@ jobs:
     needs: package
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-      - run: |
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: 'true'
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+      - name: Create release
+        run: |
+          cd LuaJIT
+          git checkout v2.1
+          COMMIT_TIME=$(git show -s --format=%ct)
+          TAG="v2.1.${COMMIT_TIME}"
+          cd .. || exit 1
           gh release create "${TAG}" --notes "LuaJIT ${TAG}" ./build/*.msi ./build/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ inputs.tag }}
